// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatus Snapshots android renders correctly with accountName in route params 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="account-status-found-container-id"
>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-start",
                "paddingBottom": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#141414",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                undefined,
              ]
            }
            testID="account-status-found-title-id"
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginBottom": 16,
                "marginTop": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              [
                {
                  "display": "flex",
                  "gap": 20,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              A wallet using "test@example.com" already exists. Do you want to try logging in instead?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "display": "flex",
            "gap": 16,
            "marginBottom": 24,
            "marginTop": "auto",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Log in"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#141414",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-login-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Log in
        </Text>
      </View>
      <View
        accessibilityLabel="Use a different login method"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-different-method-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#141414",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Use a different login method
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots android renders correctly with type="found" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="account-status-found-container-id"
>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-start",
                "paddingBottom": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#141414",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                undefined,
              ]
            }
            testID="account-status-found-title-id"
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginBottom": 16,
                "marginTop": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              [
                {
                  "display": "flex",
                  "gap": 20,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              A wallet using "[missing {{accountName}} value]" already exists. Do you want to try logging in instead?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "display": "flex",
            "gap": 16,
            "marginBottom": 24,
            "marginTop": "auto",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Log in"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#141414",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-login-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Log in
        </Text>
      </View>
      <View
        accessibilityLabel="Use a different login method"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-different-method-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#141414",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Use a different login method
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots android renders correctly with type="not_exist" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="account-status-not-found-container-id"
>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-start",
                "paddingBottom": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#141414",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                undefined,
              ]
            }
            testID="account-status-not-found-title-id"
          >
            Wallet not found
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginBottom": 16,
                "marginTop": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              [
                {
                  "display": "flex",
                  "gap": 20,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              We couldn’t find a wallet for "[missing {{accountName}} value]". Do you want to create a new one with this login?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "display": "flex",
            "gap": 16,
            "marginBottom": 24,
            "marginTop": "auto",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Create a new wallet"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#141414",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-not-found-create-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Create a new wallet
        </Text>
      </View>
      <View
        accessibilityLabel="Use a different login method"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-not-found-different-method-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#141414",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Use a different login method
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots iOS renders correctly with accountName in route params 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="account-status-found-container-id"
>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-start",
                "paddingBottom": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#141414",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                undefined,
              ]
            }
            testID="account-status-found-title-id"
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginBottom": 16,
                "marginTop": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              [
                {
                  "display": "flex",
                  "gap": 20,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              A wallet using "test@example.com" already exists. Do you want to unlock this wallet?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "display": "flex",
            "gap": 16,
            "marginBottom": 16,
            "marginTop": "auto",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Unlock wallet"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#141414",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-login-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Unlock wallet
        </Text>
      </View>
      <View
        accessibilityLabel="Use a different login method"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-different-method-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#141414",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Use a different login method
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots iOS renders correctly with type="found" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="account-status-found-container-id"
>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-start",
                "paddingBottom": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#141414",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                undefined,
              ]
            }
            testID="account-status-found-title-id"
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginBottom": 16,
                "marginTop": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              [
                {
                  "display": "flex",
                  "gap": 20,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              A wallet using "[missing {{accountName}} value]" already exists. Do you want to unlock this wallet?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "display": "flex",
            "gap": 16,
            "marginBottom": 16,
            "marginTop": "auto",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Unlock wallet"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#141414",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-login-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Unlock wallet
        </Text>
      </View>
      <View
        accessibilityLabel="Use a different login method"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-found-different-method-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#141414",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Use a different login method
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots iOS renders correctly with type="not_exist" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="account-status-not-found-container-id"
>
  <View
    style={
      [
        {
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      style={
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-start",
                "paddingBottom": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#141414",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                undefined,
              ]
            }
            testID="account-status-not-found-title-id"
          >
            Wallet not found
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginBottom": 16,
                "marginTop": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              [
                {
                  "display": "flex",
                  "gap": 20,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              We couldn’t find a wallet for "[missing {{accountName}} value]". Do you want to create a new one with this login?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "display": "flex",
            "gap": 16,
            "marginBottom": 16,
            "marginTop": "auto",
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Create a new wallet"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#141414",
              "borderRadius": 12,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-not-found-create-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#ffffff",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Create a new wallet
        </Text>
      </View>
      <View
        accessibilityLabel="Use a different login method"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#b4b4b528",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 1,
              "columnGap": 8,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "100%",
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="account-status-not-found-different-method-button-id"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#141414",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Use a different login method
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
